# groundstation

./: .gitignore  .gitmodules  .vimrc  CompressedImage_pb2.py  README.md  clean.sh  cli.py  compile_proto.sh  decode.py  groundstation_layout.json  groundstation_layout_dual.json  hotspot.sh  log_openrocket.py  lora.py  main.py  main_backup.py  pyproject.toml  rfm9x_radio.py  setup.sh  test.py  tom_packet.proto  tom_packet_pb2.py  utils.py
protobufs/: ForteState.proto  LocationFix.proto  NavPacket.proto  Sensor.proto  TomPacket.proto  compile_proto.sh
