[project]
name = "groundstation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=8.58.1",
    "adafruit-circuitpython-rfm9x>=2.2.19",
    "foxglove-websocket>=0.1.2",
    "gpiozero>=2.0.1",
    "mcap>=1.2.2",
    "mcap-protobuf-support>=0.5.3",
    "opencv-python>=4.11.0.86",
    "rpi-gpio>=0.7.1",
]
